# asteroid-weather

./: CMakeLists.txt  PageDot.qml  README.md  asteroid-weather.ca.ts  asteroid-weather.ckb.ts  asteroid-weather.cs.ts  asteroid-weather.de.ts  asteroid-weather.desktop  asteroid-weather.desktop.template  asteroid-weather.el.ts  asteroid-weather.es.ts  asteroid-weather.fa.ts  asteroid-weather.fr.ts  asteroid-weather.hu.ts  asteroid-weather.in  asteroid-weather.it.ts  asteroid-weather.kab.ts  asteroid-weather.ko.ts  asteroid-weather.nl.ts  asteroid-weather.pl.ts  asteroid-weather.pro  asteroid-weather.pt_BR.ts  asteroid-weather.ru.ts  asteroid-weather.sk.ts  asteroid-weather.ta.ts  asteroid-weather.tr.ts  asteroid-weather.uk.ts  asteroid-weather.zh_Hans.ts  main.cpp  main.qml  resources.qrc
i18n/: asteroid-weather.ar_AR.ts  asteroid-weather.ast.ts  asteroid-weather.az.ts  asteroid-weather.be.ts  asteroid-weather.bqi.ts  asteroid-weather.ca.ts  asteroid-weather.ckb.ts  asteroid-weather.cs.ts  asteroid-weather.da.ts  asteroid-weather.de.ts  asteroid-weather.de_DE.ts  asteroid-weather.desktop.h  asteroid-weather.el.ts  asteroid-weather.en_GB.ts  asteroid-weather.eo.ts  asteroid-weather.es.ts  asteroid-weather.es_AR.ts  asteroid-weather.fa.ts  asteroid-weather.fi.ts  asteroid-weather.fr.ts  asteroid-weather.gl.ts  asteroid-weather.he.ts  asteroid-weather.hi.ts  asteroid-weather.hr.ts  asteroid-weather.hu.ts  asteroid-weather.ia.ts  asteroid-weather.id.ts  asteroid-weather.isv.ts  asteroid-weather.it.ts  asteroid-weather.ja.ts  asteroid-weather.ka.ts  asteroid-weather.kab.ts  asteroid-weather.ko.ts  asteroid-weather.lb.ts  asteroid-weather.lt.ts  asteroid-weather.mr.ts  asteroid-weather.ms.ts  asteroid-weather.nb.ts  asteroid-weather.nb_NO.ts  asteroid-weather.nl.ts  (+23 more)
src/: CMakeLists.txt  icons.js  main.qml  resources.qrc
